<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Discription"
        android:paddingTop="100dp"
        android:paddingBottom="30dp"/>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_Activity"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btn_2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_Unnameclass"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_tag"
        app:layout_constraintTop_toBottomOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="clickButton"/><!--Button绑定一个事件处理方法clickButton-->
    <Button
        android:id="@+id/btn_4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_inclass"
        app:layout_constraintTop_toBottomOf="@id/btn_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_outclass"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Monitor_Butter"
        app:layout_constraintTop_toBottomOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/System_message"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_8"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Emulate_Process"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>